resources/tests/invalid_syntax/parens.ct
//Error: Unclosed parenthesis delimiter!
//1
fn hello()->void: (10 + 10 + (10 + (10));